Fix spacing between buttons

--- a/src/app/landing/file-selection/file-selection.component.css
+++ b/src/app/landing/file-selection/file-selection.component.css
@@ -3,3 +3,7 @@
     justify-content: center;
     align-items: center;
 }
+
+.margin {
+  margin: 0 30px;
+}
